Change a bunch of stuff. Even more stuff still needs changing though